2005-11-12  Aaron Bockover  <aaron@aaronbock.net>

	* src/PlayerInterface.cs: Implement some more key bindings, and changed
	the default behavior of the previous button to reset the position of
	the current playing song to 0 seconds if the song has played for more
	than ~2 seconds (the resolution on this isn't very precise); Shift+Previous
	Click goes to the previous song no matter what, and pressing space now
	toggles playback (play/pause)

2005-11-12  James Willcox  <snorp@snorp.net>

	* src/IpodCore.cs: be a little more careful, and update to the
	changed API for progress reporting.
	* src/IpodTrackInfo.cs: use PathUtil.PathToFileUri
	* src/LibraryTrackInfo.cs: ditto, and store Uris in the db
	in escaped form.
	* src/SqlGenerator.cs: don't unnecessarily remove quotes when
	escaping them.

2005-11-11  Aaron Bockover  <aaron@aaronbock.net>
	
	* configure.ac: Version 0.9.11.1
	* NEWS: Updated release notes
	* data/glade/player.glade: Added another container for switching out
	widgets during the ipod sync state
	* src/IpodCore.cs (EmitSyncStarted), (EmitSyncCompleted): Emit through
	Core.ProxyToMainThread
	* src/PlayerInterface.cs: Fixed ipod syncing, was a threading issue,
	of course; fixed up syncing UI, made things more consistent and feel
	better, tooltips, labels, etc
	* data/images/source-ipod-regular.png, data/images/source-ipod-color.png,
	data/images/source-ipod-shuffle.png: renamed to ipod-regular-24.png,
	ipod-color-24.png, and ipod-shuffle.png
	* src/Makefile.am: 
	* data/images/Makefile.am: Updated to reflect renaming of ipod icons
	* src/PlayerInterface.cs:
	* src/SourceView.cs: Use IpodMisc.GetIconString() to get icon file name
	* src/IpodCore.cs: Show the actual iPod icon for the progress widget; 
	added IpodMisc.GetIconString(device) to return the proper string for
	building an ipod file name to show icon matching actual iPod
	* src/IpodCore.cs: Hopefully fixed URI translation problem; canceling the